@@ -1,3 +1,9 @@
+2009-10-02  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)
+
+	* configure.ac: Drop the subdir-objects Automake option, since
+	it's incompatible with picking source files from libatomic_ops.
+	* Makefile.in: Regenerate.
+
 2009-10-01  Ivan Maidanski <ivmai@mail.ru> (really mostly Andreas Tobler)
 
 	* allchblk.c (GC_fail_count, GC_large_alloc_warn_interval): Add
@@ -1063,7 +1069,7 @@
 	* doc/README.win64: Add info about mingw-w64; add note for VC++
 	warnings suppression.
 
-2009-09-15 Hans Boehm <Hans.Boehm@hp.com> (Mostly Juan Jose Garcia-Ripoll)
+2009-09-15  Hans Boehm <Hans.Boehm@hp.com> (Mostly Juan Jose Garcia-Ripoll)
 	(Also similar to, but not the same as, Ivan's diff104_cvs)
 
 	* os_dep.c (GC_forward_exception): Fix logic in several places.
